// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can colorize diff 1`] = `
"Snapshot Diff:
[32m- First value[39m
[31m+ Second value[39m

[33m@@ -5,9 +5,10 @@[39m
[2m      some[22m
[2m      some[22m
[2m      some[22m
[2m      some[22m
[2m      not[22m
[31m+     so[39m
[2m      very[22m
[2m      long[22m
[2m      script[22m
[2m  [22m"
`;

exports[`can expand diff 1`] = `
"Snapshot Diff:
- First value
+ Second value

  
      some
      some
      some
      some
      some
      some
      some
      not
+     so
      very
      long
      script
  "
`;

exports[`can use contextLines on diff 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,0 +10,1 @@
+     so"
`;

exports[`can use contextLines with React components 1`] = `
"Snapshot Diff:
- <Component test=\\"say\\" />
+ <Component test=\\"my name\\" />

@@ -6,1 +6,1 @@
-     say
+     my name
@@ -9,1 +9,1 @@
-     say
+     my name
@@ -32,1 +32,1 @@
-     say
+     my name"
`;

exports[`collapses diffs and strips ansi by default 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,9 +5,10 @@
      some
      some
      some
      some
      not
+     so
      very
      long
      script
  "
`;

exports[`detects React components 1`] = `
"Snapshot Diff:
- <Component test=\\"say\\" />
+ <Component test=\\"my name\\" />

@@ -1,14 +1,14 @@
  <div>
    <span />
    <span />
    <span />
    <span>
-     say
+     my name
    </span>
    <span>
-     say
+     my name
    </span>
    <span />
    <span />
    <span />
    <span />
@@ -27,11 +27,11 @@
    <span />
    <span />
    <span />
    <span />
    <span>
-     say
+     my name
    </span>
    <span />
    <span />
    <span />
    <span />"
`;

exports[`diffs short strings 1`] = `
"Snapshot Diff:
- First value
+ Second value

  
-   abcx
+   abcy
    "
`;

exports[`failed optional deps throws with sensible message on missing react-test-renderer 1`] = `
"Failed to load optional module \\"react-test-renderer\\". Are you sure that it's listed in your project's dependencies?
Cannot find module 'non-existent-module-for-testing' from 'snapshotDiff.test.js'"
`;
